<resources>
    <string name="app_name">My Application AAA1</string>

    <string name="tab_profile">Profile</string>
    <string name="tab_home">Home</string>
    <string name="tab_chat">Chat</string>

    //Register activity
    <string name="register_button">Register</string>

    //Login activity
    <string name="login_button">Log In</string>

    //Profile activity
    <string name="logout_button">Log Out</string>
    <string name="onlineFeatures_switch">Show Online Features</string>

    //User Edit Text
    <string name="email_editText">Email Address</string>
    <string name="username_editText">Username</string>
    <string name="password_editText">Password</string>

    //streams
    <string name="hello_blank_fragment">hello_blank_fragment_test</string>

    //ADD POST
    <string name="default_text">Enter your text post here</string>
    <string name="finish_button">Post</string>
    <string name="refresh_button">Refresh Posts</string>
    //DETAIL POST
    <string name="add_comment_button">Comment</string>

    //STREAMS
    <string name="ff14_search_Button">Game</string>
    <string name="streams_search_Button">Refresh Streams</string>
    <string name="players_search_Button">Player</string>


</resources>
