<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        tools:context=".activity.RegisterActivity">

        <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_icon"
                android:layout_gravity="center_horizontal"/>

        <EditText
                android:id="@+id/emailLoginEditText"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"/>

        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/login_edit_background"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_editText"
                android:padding="10dp" />

        <TextView
                android:id="@+id/ForgotPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password ?"
                android:layout_gravity="end"
                android:padding="10dp"/>

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:scaleType="centerInside" />

        <Button
                android:id="@+id/LogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/login_button_background"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textSize="21sp"/>

        <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/login_button_background"
                android:text="@string/register_button"
                android:textAllCaps="false"
                android:textSize="21sp"/>

        <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"/>

</LinearLayout>