<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/ic_icon"
                android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_background"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/emailEditText"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_background"
            android:padding="10dp"/>
        <EditText
                android:id="@+id/passwordEditText"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_background"
                android:padding="10dp"/>
        <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:gravity="center" />

        <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/login_button_background"
                android:text="@string/register_button"
                android:textAllCaps="false"
                android:textSize="21sp"
                />

<!--        <com.google.android.gms.common.SignInButton-->
<!--                android:id="@+id/google_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:padding="8dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"/>-->



    </LinearLayout>

</RelativeLayout>