<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".activity.AddPostActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/userPhotoComment"
                android:layout_width="@dimen/photo_extra"
                android:layout_height="@dimen/photo_extra"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_icon" />

        <TextView
                android:id="@+id/usernameComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@drawable/login_edit_background"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/marginText_medium"
                android:hint="@string/username_editText"
                android:padding="@dimen/marginText_medium" />


        <EditText
                android:id="@+id/commentTextCommentActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@drawable/login_edit_background"
                android:paddingStart="20dp"
                android:hint="@string/default_text"
                android:padding="@dimen/marginText_medium" />



        <Button
                android:id="@+id/finishCommentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginText_extra"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/marginText_extra"
                android:background="@drawable/login_button_background"
                android:text="@string/finish_button"
                android:textAllCaps="false"
                android:textSize="21sp" />



    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBarAddComment"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progressbar_medium"
            android:layout_centerInParent="true"
            android:scaleType="centerInside" />

</RelativeLayout>